Project-05-Kubernetes-Ingress/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hverse-project05
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hverse-project05
  template:
    metadata:
      labels:
        app: hverse-project05
    spec:
      containers:
        - name: web
          image: hverse-project05:v1
          imagePullPolicy: Never
          ports:
            - containerPort: 80
