Project-05-Kubernetes-Ingress/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hverse-project05-svc

spec:
  type: ClusterIP
  selector:
    app: hverse-project05
  ports:
    - port: 80
      targetPort: 80
